@@ -1,0 +1,24 @@
+<%args>
+  $error => ''
+</%args>
+<%init>
+use EBox::Gettext;
+</%init>
+<div id="activation-required">
+    <header>
+        <img src="/data/images/title-login.png"></img>
+        <h1><% __('Activation Required') %></h1>
+    </header>
+% if ($error) {
+    <div id="error"><% $error %></div>
+% }
+    <form>
+    <h3><% __('Please enter your license key') %></h3>
+    <center>
+        <input id="key" class="inputText" size="24" name="key" type="text">
+        <h3><% __x('You can get one by requesting a free 30-day trial at {href}', href => '<a href="http://zentyal.com/trial">http://zentyal.com/trial</a>') %></h3>
+        <br>
+        <input class="btn btn-green btn-big btn-block" id="validate" type="submit" value="<% __('Validate License') %>">
+    </center>
+    </form>
+</div>
