@@ -1,3 +1,5 @@
+HEAD
+	+ New activation-pending mode prompting for valid trial code before login
 5.0.7
 	+ Update external links in dashboard
 	+ Mask plaintext passwords in bug reports
